fixed bug on mobile

--- a/css/components/_projectPage.scss
+++ b/css/components/_projectPage.scss
@@ -54,22 +54,21 @@
                 width: 95%;
             }
 
-            &:hover{
+            // &:hover{
 
-                .portfolio_item{
-                    animation-name: fadeIn;
-                    animation-duration: .7s;
-                    animation-fill-mode: forwards;
-                 }
+            //     .portfolio_item{
+            //         animation-name: fadeIn;
+            //         animation-duration: .7s;
+            //         animation-fill-mode: forwards;
+            //      }
 
-                .portfolio_item--description{
-                    opacity: 0;
-                }
+            //     .portfolio_item--description{
+            //         opacity: 0;
+            //     }
                 
-            }
+            // }
 
             .portfolio_item{
-                //position: absolute;
                 width: 100%;
                 height: 100%;
                 opacity: 0;
@@ -78,7 +77,6 @@
                 justify-content: space-around;
 
                 .project-description{
-                    //height: 70%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -86,10 +84,8 @@
                 }
 
                 .btnContainer{
-                    //height: 30%;
                     display: flex;
                     justify-content: space-around;
-                    //text-decoration: none;
 
                     .projectBtn{
                         display: inline-block;
@@ -117,11 +113,6 @@
                 position: absolute;
                 opacity: 1;
             }
-
-            // &:hover{
-            //     background-color: var(--clr-accent);
-                
-            // }
 
             .project-logo{
                 width: 250px;
