--- a/css/components/_projects.scss
+++ b/css/components/_projects.scss
@@ -75,6 +75,18 @@
             position: relative;
             margin: 8px;
 
+            .show {
+                @media (max-width: 768px) {
+                    opacity: 1!important;
+                }
+            }
+
+            .hide {
+                @media (max-width: 768px) {
+                    opacity: 0 !important;
+                }
+            }
+
             @media(max-width: 768px) {
                 &:hover {
                     height: 275px;
@@ -93,20 +105,20 @@
 
             &:hover{
 
-                .portfolio_item{
-                    animation-name: fadeIn;
-                    animation-duration: .7s;
-                    animation-fill-mode: forwards;
-                 }
-
-                .portfolio_item--description{
-                    opacity: 0;
-                }
-                
+                @media (min-width: 768px) {
+                    .portfolio_item{
+                        animation-name: fadeIn;
+                        animation-duration: .7s;
+                        animation-fill-mode: forwards;
+                     }
+    
+                    .portfolio_item--description{
+                        opacity: 0;
+                    }
+                }   
             }
 
             .portfolio_item{
-                //position: absolute;
                 width: 100%;
                 height: 100%;
                 opacity: 0;
@@ -115,7 +127,6 @@
                 justify-content: space-around;
 
                 .project-description{
-                    //height: 70%;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -123,10 +134,8 @@
                 }
 
                 .btnContainer{
-                    //height: 30%;
                     display: flex;
                     justify-content: space-around;
-                    //text-decoration: none;
 
                     .projectBtn{
                         display: inline-block;
@@ -154,11 +163,6 @@
                 position: absolute;
                 opacity: 1;
             }
-
-            // &:hover{
-            //     background-color: var(--clr-accent);
-                
-            // }
 
             .project-logo{
                 width: 250px;
